--- a/web/CSS/Assignment-6.css
+++ b/web/CSS/Assignment-6.css
@@ -25,7 +25,7 @@ h1{
 .card {
     background-color: rgb(213, 240, 140);
     height: 360px;
-    width: 22%;
+    width: 260px;
     padding: 20px;
     border-radius: 20px;
     text-align: center;
