--- a/web/CSS/Assignment-6.css
+++ b/web/CSS/Assignment-6.css
@@ -26,6 +26,7 @@ h1{
     background-color: rgb(213, 240, 140);
     height: 360px;
     width: 260px;
+    margin-right: 10px;
     padding: 20px;
     border-radius: 20px;
     text-align: center;
