--- a/web/CSS/index-css.css
+++ b/web/CSS/index-css.css
@@ -9,6 +9,24 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+.main-container{
+  height: 100vh;
+  overflow: hidden;
+}
+.loader-container{
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0 ,0, 0, 0.6);
+}
+.loader-container img{
+  height: 200px;
+}
 .image img{
     width: 100%;
     height: 100vh;
